@@ -583,7 +583,7 @@ dojo.declare("classes.diplomacy.ui.EldersPanel", classes.diplomacy.ui.RacePanel,
 		var content = this.inherited(arguments);
 
 		var self = this;
-		var feedBtn = new com.nuclearunicorn.game.ui.ButtonModern({
+		this.feedBtn = new com.nuclearunicorn.game.ui.ButtonModern({
 				name: $I("trade.msg.elders.feed"),
 				description: $I("trade.msg.elders.feed.desc"),
 				controller: new com.nuclearunicorn.game.ui.ButtonModernController(this.game),
@@ -591,7 +591,7 @@ dojo.declare("classes.diplomacy.ui.EldersPanel", classes.diplomacy.ui.RacePanel,
 					self.game.diplomacy.feedElders();
 				}
 			}, this.game);
-		feedBtn.render(content);
+		this.feedBtn.render(content);
 
 		if (this.game.science.get("blackchain").researched || this.game.resPool.get("blackcoin").value > 0) {
 			this.buyBcoin = new com.nuclearunicorn.game.ui.ButtonModern({
@@ -615,16 +615,63 @@ dojo.declare("classes.diplomacy.ui.EldersPanel", classes.diplomacy.ui.RacePanel,
 			this.sellBcoin.render(content);
 		}
 
-		this.feedBtn = feedBtn;
+		if (this.game.science.get("antimatter").researched && this.game.science.get("invisibleBlackHand").researched) {
+			this.smashBcoin = new com.nuclearunicorn.game.ui.ButtonModern({
+				name: $I("trade.smash.bcoin"),
+				description: $I("trade.smash.bcoin.desc"),
+				controller: new com.nuclearunicorn.game.ui.SmashBcoinButtonController(this.game),
+				handler: function () {
+					self.game.calendar.correctCryptoPrice();
+				}
+			}, this.game);
+			this.smashBcoin.render(content);
+		}
+
 		return content;
 	},
 
-	update: function(){
+	update: function() {
 		this.inherited(arguments);
-		if (this.feedBtn){
+		if (this.feedBtn) {
 			this.feedBtn.update();
 		}
+		if (this.smashBcoin) {
+			this.smashBcoin.update();
+		}
+	}
+});
 
+dojo.declare("com.nuclearunicorn.game.ui.SmashBcoinButtonController", com.nuclearunicorn.game.ui.ButtonModernController, {
+	defaults: function() {
+		var result = this.inherited(arguments);
+		result.hasResourceHover = true;
+		result.simplePrices = true;
+		return result;
+	},
+
+	fetchExtendedModel: function(model) {
+		model.prices = this.getPrices();
+		this.inherited(arguments);
+	},
+
+	getPrices: function() {
+		var uoMultiplier = this.game.calendar.cycleEffectsBasics({unobtainiumPerTickSpace: 1}, "moonOutpost").unobtainiumPerTickSpace * this.game.calendar.cycleEffectsFestival({unobtainium: 1}).unobtainium;
+		var merchantTradeRatio = 1 + this.game.getEffect("tradeRatio") + 0.03 * (1 + this.game.prestige.getBurnedParagonRatio());
+		var tcPerStandardYear = 0.196 * this.game.getResourcePerTick("unobtainium") / uoMultiplier * merchantTradeRatio * (1 + this.game.diplomacy.get("leviathans").energy * 0.02);
+
+		var ticksPerYear = this.game.calendar.ticksPerDay * this.game.calendar.daysPerSeason * this.game.calendar.seasonsPerYear;
+		var tcPerTick_phase0 = 1.13 * tcPerStandardYear / ticksPerYear;
+		var tcPerTick_phase1 = (2.4 * tcPerStandardYear - 9) / ticksPerYear;
+
+		var heatPerShatter = this.game.challenges.getChallenge("1000Years").researched ? 5 : 10;
+		var tcPerSkip = 1.13 * tcPerStandardYear * this.game.getEffect("shatterTCGain") * (1 + this.game.getEffect("rrRatio"));
+		var tcPerShatter = (1 + heatPerShatter / 100) * tcPerSkip - 1;
+		var tcPerTick_phase2 = tcPerTick_phase0 + tcPerShatter / heatPerShatter * this.game.getEffect("heatPerTick");
+
+		var tcPerTick = Math.max(tcPerTick_phase0, tcPerTick_phase1, tcPerTick_phase2);
+		// this.game.calendar.ticksPerDay / (0.4 * (40000 + 1) * Math.log1p(1/40000) - 0.3 * (40000 - 1) * Math.log1p(-1/40000) - 0.7) = 8000466.692810739, but Math.log1p is ES6
+		var ticksUntilNextNaturalCrash = 8000466.692810739 * Math.log(1100 / this.game.calendar.cryptoPrice);
+		return [{name: "timeCrystal", val: tcPerTick * ticksUntilNextNaturalCrash}];
 	}
 });
 
@@ -919,12 +966,16 @@ dojo.declare("com.nuclearunicorn.game.ui.tab.Diplomacy", com.nuclearunicorn.game
 			racePanel.race = race;
 			racePanel.collapse(race.collapsed);
 
-			if (racePanel.buyBcoin && racePanel.sellBcoin){
+			if (racePanel.buyBcoin && racePanel.sellBcoin) {
 				var tradePanel = dojo.create("div", {className:"crypto-trade" /*, style:{display:"none"}*/ }, null);
 				dojo.place(tradePanel, rightColumn, "last");
 
 				dojo.place(racePanel.buyBcoin.domNode, tradePanel, "last");
 				dojo.place(racePanel.sellBcoin.domNode, tradePanel, "last");
+			}
+
+			if (racePanel.smashBcoin) {
+				dojo.place(racePanel.smashBcoin.domNode, rightColumn, "last");
 			}
 		}
 
