@@ -1565,10 +1565,15 @@
     "science.blackchain.desc": "All cool cats are mining this, so I think it is some kind of mineral",
     "science.blackchain.effectDesc": "Unlocks cryptomining and blackcoin exchange",
     "resources.blackcoin.title": "blackcoin",
+    "science.invisibleBlackHand.label": "Invisible Black Hand",
+    "science.invisibleBlackHand.desc": "The Invisible Black Hand (not related to the Invisible Pink Unicorn) is leading the blackcoin market. But it can get angry if you try to force it",
+    "science.invisibleBlackHand.effectDesc": "Allow to smash the blackcoin market",
     "trade.buy.bcoin": "Buy bcoin",
     "trade.buy.bcoin.desc": "Exchange your relics for blackcoins",
     "trade.sell.bcoin": "Sell bcoin",
     "trade.sell.bcoin.desc": "Sell your blackcoins and get relics back",
+    "trade.smash.bcoin": "Smash blackcoin market",
+    "trade.smash.bcoin.desc": "Force blackcoin market crash",
     "space.planet.helios.sunforge.label": "Sunforge",
     "space.planet.helios.sunforge.desc": "Uses the heat of the sun to smelt materials into supercondensed plasma. Every level of Sunforge improves the storage space of your base metals by 1%",
     "village.happiness.festival": "Festival",
